--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "sass": "^1.32.8",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue-session": "^1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.5.0",
