--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "lodash": "^4.17.21",
-    "pusher": "^5.0.0",
+    "pusher-client": "^1.1.0",
+    "pusher-js": "^5.1.1",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
