--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "core-js": "^3.6.5",
     "lodash": "^4.17.21",
     "pusher-client": "^1.1.0",
-    "pusher-js": "^5.1.1",
-
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0"
@@ -27,7 +25,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.24.0",
     "eslint-plugin-vue": "^7.8.0",
+    "pusher-js": "^7.0.3",
     "sass": "^1.26.5",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "vue-chat-scroll": "^1.4.0"
   }
 }
