--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "eslint-plugin-vue": "^7.8.0",
     "pusher-js": "^7.0.3",
     "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "vue-chat-scroll": "^1.4.0"
+    "sass-loader": "^8.0.2"
   }
 }
